--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <h4 class="about-text-4">I make videos, take photos, and edit.</h3>
             </div>
             <div class="about-picture">
-                <img class="profile-pic" src="logos_thumbnails/profile-pic.JPG" alt="profile-pic">
+                <img class="profile-pic" src="logos_thumbnails/profile-pic.jpg" alt="profile-pic">
             </div>
         
         </div>
