editing gallery update

--- a/editing-gallery.html
+++ b/editing-gallery.html
@@ -30,7 +30,44 @@
     </header>
 
 
-    <h1 class="video-gallery-header-1">Coming soon!</h1>
+    <section class="work-section">
+      <div class="projects">
+
+          <h1 class="video-gallery-header-1">Podcasts</h1>
+          <div class="project-1">
+              <img class="note-keeper-img" width="420" height="315" src="./logos_thumbnails/clifford_podcast_screenshot.png"></img>
+              <div class="project-description">
+                  <h3 class="note-h3">Feel Bad Town (Clifford Myers)</h3>
+                  <p class="note-p">I can do subtitiles, sound mixing, highlight clips, etc.</p>
+                  <a 
+                      class="work-button"
+                      href="https://www.instagram.com/p/CfcM6KcqMds/" 
+                      target="_blank"
+                      >Full-Size Video</a>  
+
+              </div>
+          </div>
+
+          <hr class="home-hr">
+
+
+          <h1 class="video-gallery-header-1">Funeral Slideshows & Montages</h1>
+          <div class="project-1">
+              <iframe class="note-keeper-img" width="420" height="315" src="https://www.youtube.com/embed/oMKDUOiBxFY" allowfullscreen="allowfullscreen"></iframe>
+              <div class="project-description">
+                  <h3 class="note-h3">Regent Guindon's Funeral Slideshow</h3>
+                  <p class="note-p">I work with the photos and videos of those who pasted away to help remember them.</p>
+                  <a 
+                      class="work-button"
+                      href="https://www.instagram.com/p/embed/CfcM6KcqMds/" 
+                      target="_blank"
+                      >Full-Size Video</a>  
+
+              </div>
+          </div>
+
+          <hr class="home-hr">
+  </section>
 
         
    
@@ -59,7 +96,7 @@
                 <a
                   target="_blank"
                   class="social-media-link"
-                  href="https://www.instagram.com/zilbergmedia/"
+                  href="https://www.instagram.com/mitchzilberg/"
                 >
                   <img
                     class="social-media-img"
