--- a/photo-gallery.html
+++ b/photo-gallery.html
@@ -91,7 +91,7 @@
                 <a
                   target="_blank"
                   class="social-media-link"
-                  href="https://www.instagram.com/zilbergmedia/"
+                  href="https://www.instagram.com/mitchzilberg/"
                 >
                   <img
                     class="social-media-img"
