--- a/video-gallery.html
+++ b/video-gallery.html
@@ -29,7 +29,6 @@
         </nav>
     </header>
 
-    <div class="test" id="work"></div>
     <section class="work-section">
         <div class="projects">
 
@@ -206,7 +205,7 @@
                 <a
                   target="_blank"
                   class="social-media-link"
-                  href="https://www.instagram.com/zilbergmedia/"
+                  href="https://www.instagram.com/mitchzilberg/"
                 >
                   <img
                     class="social-media-img"
