fix slideshow link

--- a/editing-gallery.html
+++ b/editing-gallery.html
@@ -59,7 +59,7 @@
                   <p class="note-p">I work with the photos and videos of those who pasted away to help remember them.</p>
                   <a 
                       class="work-button"
-                      href="https://www.instagram.com/p/embed/CfcM6KcqMds/" 
+                      href="https://www.youtube.com/embed/oMKDUOiBxFY" 
                       target="_blank"
                       >Full-Size Video</a>  
 
